C1: assert(code_offset() - offset == NativeInstruction::nop_instruction_size) failed: only one instruction can go in a delay slot

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 8u20
    • Affects Version/s: hs25
    • Component/s: hotspot
    • None
    • b01
    • sparc
    • solaris

        This assert happened once, but unfortunately it isn't easy to reproduce. Error log attached.

              Assignee:
              Niclas Adlertz (Inactive)
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: