8011391: C1: assert(code_offset() - offset == NativeInstruction::nop_instruction_size) failed: only one instruction can go in a delay slot

Remove the VerifyOopMaps flag which doesn't work for tiered or for C1 with more compiler threads than one.

Reviewed-by: twisti, drchase, iveresov